--- a/mega-sena-lottery.ipynb
+++ b/mega-sena-lottery.ipynb
@@ -588,7 +588,7 @@
    "source": [
     "A base disponibilizada é bem confiável e não consta valores acidentais ou valores nulos no dataset já que existe um compromisso do processo ser auditável.\n",
     "\n",
-    "Ufa! Essa estava será basicamente transformar os dados para o tipo ideal."
+    "Ufa! Essa etapa será basicamente transformar os dados para o tipo ideal."
    ]
   },
   {
